[project]
name = "comfyui-dart"
description = "Add nodes that generates danbooru tags by [a/Dart(Danbooru Tags Transformer)](https://huggingface.co/p1atdev/dart-v1-sft)."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/nkchocoai/ComfyUI-Dart"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nkchocoai"
DisplayName = "ComfyUI-Dart"
Icon = ""
